static page with css and images

--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-Hello, I am Minjie Sun
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>mjsun</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:100,300,400" rel="stylesheet"> 
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel="stylesheet" href="css/blog.css">
+  </head>
+  <body>
+    <div class="view-container midnight-blue-bg" 
+      style="background-image:url('images/background.jpg');
+      background-repeat:no-repeat;
+      background-size:100%;">
+      <div class="container">
+        <div class="nav-bar">
+          <div class="nav-item"><a id="about-me">About Me</a></div>
+          <div class="nav-item"><a>My Story</a></div>
+          <div class="nav-item"><a>My Blog</a></div>
+        </div>
+        <div class="text-container">
+          <div class="name-container">
+            <div class="name-text white">Minjie</div>
+            <div class="name-text periwinkle">Sun</div>
+          </div>
+        </div>
+
+        <div class="text-container">
+          <div class="center-text-block hidden" id="landing-content">
+            <p>Software Engineer</p>
+            <p>Hello There, I build things</p>
+          </div>
+          <div class="center-text-block" id="about-me-content">
+            <p>Hello, my username is Minjie.  I am playing to become a better person at Plant Earth server. I believe knowledge is the key to a better world. The belief was formed through out my way levelling up from primary school, middle school and university. I was trained mostly in science and technology and I love that. I had the dream of becoming an Engineer and build things back in my childhood, and I am glad all the choices I have made lead me to this path.</p> 
+            <p>There are always better things.</p>
+            <p>I started programming for work from early 2015. The work includes data processing, graphical visualisation and full stack web development. Since that, I am fascinated by the world of coding. I realised the potential of software products to make everybody's life better, just like how machines did in past two centuries.</p>
+            <p>There are always better things yet to come.</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </body>
+</html>
+
